// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppsDetail should match a snapshot for viewport desktop 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div />
      <div />
      <div />
    </div>
    <div
      id="root"
    />
    <div>
      <div
        class="el-snack-holder"
      />
      <section
        class="el-page-container"
      >
        <div
          class="el-loader-container"
        >
          <div
            class="el-loader"
          >
            <div
              class="el-loader-moving-bar"
            />
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <section
      class="el-page-container"
    >
      <div
        class="el-loader-container"
      >
        <div
          class="el-loader"
        >
          <div
            class="el-loader-moving-bar"
          />
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppsDetail should match a snapshot for viewport mobile 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div />
      <div />
      <div />
    </div>
    <div
      id="root"
    />
    <div>
      <div
        class="el-snack-holder"
      />
      <section
        class="el-page-container"
      >
        <div
          class="el-loader-container"
        >
          <div
            class="el-loader"
          >
            <div
              class="el-loader-moving-bar"
            />
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <section
      class="el-page-container"
    >
      <div
        class="el-loader-container"
      >
        <div
          class="el-loader"
        >
          <div
            class="el-loader-moving-bar"
          />
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppsDetail should match a snapshot for viewport superWidescreen 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div />
      <div />
      <div />
    </div>
    <div
      id="root"
    />
    <div>
      <div
        class="el-snack-holder"
      />
      <section
        class="el-page-container"
      >
        <div
          class="el-loader-container"
        >
          <div
            class="el-loader"
          >
            <div
              class="el-loader-moving-bar"
            />
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <section
      class="el-page-container"
    >
      <div
        class="el-loader-container"
      >
        <div
          class="el-loader"
        >
          <div
            class="el-loader-moving-bar"
          />
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppsDetail should match a snapshot for viewport tablet 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div />
      <div />
      <div />
    </div>
    <div
      id="root"
    />
    <div>
      <div
        class="el-snack-holder"
      />
      <section
        class="el-page-container"
      >
        <div
          class="el-loader-container"
        >
          <div
            class="el-loader"
          >
            <div
              class="el-loader-moving-bar"
            />
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <section
      class="el-page-container"
    >
      <div
        class="el-loader-container"
      >
        <div
          class="el-loader"
        >
          <div
            class="el-loader-moving-bar"
          />
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppsDetail should match a snapshot for viewport widescreen 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div />
      <div />
      <div />
    </div>
    <div
      id="root"
    />
    <div>
      <div
        class="el-snack-holder"
      />
      <section
        class="el-page-container"
      >
        <div
          class="el-loader-container"
        >
          <div
            class="el-loader"
          >
            <div
              class="el-loader-moving-bar"
            />
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <section
      class="el-page-container"
    >
      <div
        class="el-loader-container"
      >
        <div
          class="el-loader"
        >
          <div
            class="el-loader-moving-bar"
          />
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppsDetail should match a snapshot when loading 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div />
      <div />
      <div />
    </div>
    <div
      id="root"
    />
    <div>
      <div
        class="el-snack-holder"
      />
      <section
        class="el-page-container"
      >
        <div
          class="el-loader-container"
        >
          <div
            class="el-loader"
          >
            <div
              class="el-loader-moving-bar"
            />
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <section
      class="el-page-container"
    >
      <div
        class="el-loader-container"
      >
        <div
          class="el-loader"
        >
          <div
            class="el-loader-moving-bar"
          />
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppsDetail should match a snapshot when not installed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div />
      <div />
      <div />
      <div />
      <div />
    </div>
    <div
      id="root"
    />
    <div>
      <div
        class="el-snack-holder"
      />
      <section
        class="el-page-container"
      >
        <div
          class="el-intent-critical el-persistent-notification"
        >
          <div
            class="el-pn-icon"
            data-testid="close-icon"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </div>
          <div
            class="el-pn-content"
          >
            Interested in hearing more about this app? Click here and one of the Reapit Team will be in touch!
          </div>
        </div>
        <div
          class="app-detail-back-button"
        >
          <span
            class="el-intent-primary el-icon"
          >
            <svg />
          </span>
        </div>
        <div
          class="el-mb5 el-flex-container"
        >
          <div
            class="app-detail-wrapper"
          >
            <img
              alt="will-test-dev-co-voracious-person"
              class="el-fade-in app-detail-icon"
              src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Online-Check-List-icon.png"
            />
          </div>
          <div
            class="el-flex-column el-flex-justify-between el-flex-container"
          >
            <div
              class="el-flex-column el-flex-container"
            >
              <h1
                class="el-has-no-margin el-title"
              >
                will-test-dev-co-voracious-person
              </h1>
              <p
                class="el-has-grey-text el-body-text"
              >
                Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar
              </p>
            </div>
            <div
              class="el-flex-container"
            >
              <span
                class="el-mr5 el-intent-success el-icon"
              >
                <svg />
              </span>
              <p
                class="el-mr5 el-has-no-margin el-small-text"
              >
                Integration Enabled
              </p>
              <span
                class="el-mr5 el-intent-success el-icon"
              >
                <svg />
              </span>
              <p
                class="el-mr5 el-has-no-margin el-small-text"
              >
                Verified by Reapit
              </p>
              <div
                class="el-fade-in app-detail-category-chip"
              >
                Category
              </div>
              <p
                class="el-mr5 el-has-bold-text el-has-no-margin el-small-text"
              >
                Integration
              </p>
            </div>
          </div>
        </div>
        <div
          class="el-mb11 el-button-group"
        >
          <div
            class="el-button-group-align-left el-button-group-inner"
          >
            <a
              href="mailto:foo@bar.com?subject=will-test-dev-co-voracious-person%20Enquiry&body=Dear%20Will Test DevCo%2C%20%0A%0AI%20would%20like%20more%20information%20about%20will-test-dev-co-voracious-person%20featured%20in%20the%20Reapit%20AppMarket%20%0A%0ARegards"
              rel="noopener noreferrer"
              target="_blank"
            >
              <button
                class="el-intent-low el-button"
              >
                Enquire About Integration
                <div
                  class="el-button-loader"
                />
              </button>
            </a>
          </div>
        </div>
        <div
          class="apps-detail-content-grid"
        >
          <div
            class="apps-detail-content-col-main"
          >
            <h2
              class="el-has-bold-text el-subtitle"
            >
              About App
            </h2>
            <div>
              Mock Component
            </div>
            <div
              class="el-button-group"
            >
              <div
                class="el-button-group-inner"
              >
                <button
                  class="el-intent-low el-button"
                >
                  <div
                    class="el-flex-align-center el-flex-container"
                  >
                    <span
                      class="el-mr4 el-intent-primary el-icon"
                      style="font-size: 1.25em;"
                    >
                      <svg />
                    </span>
                    Getting started with 
                    will-test-dev-co-voracious-person
                  </div>
                  <div
                    class="el-button-loader"
                  />
                </button>
                <button
                  class="el-intent-low el-button"
                >
                  <div
                    class="el-flex-align-center el-flex-container"
                  >
                    <span
                      class="el-mr4 el-intent-primary el-icon"
                      style="font-size: 1.25em;"
                    >
                      <svg />
                    </span>
                    Why 
                    will-test-dev-co-voracious-person
                  </div>
                  <div
                    class="el-button-loader"
                  />
                </button>
              </div>
            </div>
          </div>
          <div
            class="apps-detail-content-col-carousel"
          >
            <div
              class="carousel-wrapper"
            >
              <div
                class="carousel-grid"
                style="--ckvo4up-0: 1; --ckvo4up-1: 50.000%; --ckvo4up-2: 0.375rem; --ckvo4up-6: 0.625rem;"
              >
                <div
                  class="carousel-col"
                >
                  <div
                    class="app-detail-image-wrapper"
                  >
                    <img
                      alt="Application Image"
                      class="app-detail-image"
                      src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Online-Check-List-screen2ImageUrl.png"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="apps-detail-content-col-permissions"
          >
            <div
              class="el-mb11 app-detail-support-grid"
            >
              <div
                class="app-detail-support-grid-col"
              >
                <h2
                  class="el-has-no-margin el-subtitle"
                >
                  Website
                </h2>
                <p
                  class="app-detail-info-line-adjust el-has-grey-text el-has-no-margin el-body-text"
                >
                  <a
                    href="https://foo.bar"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    https://foo.bar
                  </a>
                </p>
              </div>
              <div
                class="app-detail-support-grid-col"
              >
                <h2
                  class="el-has-no-margin el-subtitle"
                >
                  Support Email
                </h2>
                <p
                  class="app-detail-info-line-adjust el-has-grey-text el-has-no-margin el-body-text"
                >
                  <a
                    href="mailto:foo@bar.com"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    foo@bar.com
                  </a>
                </p>
              </div>
              <div
                class="app-detail-support-grid-col"
              >
                <h2
                  class="el-has-no-margin el-subtitle"
                >
                  Telephone
                </h2>
                <p
                  class="app-detail-info-line-adjust el-has-grey-text el-has-no-margin el-body-text"
                >
                  07777777777
                </p>
              </div>
              <div
                class="app-detail-support-grid-col"
              >
                <h2
                  class="el-has-no-margin el-subtitle"
                >
                  Terms and Conditions
                </h2>
                <p
                  class="app-detail-info-line-adjust el-has-grey-text el-has-no-margin el-body-text"
                >
                  <a
                    href="https://foo.bar"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    https://foo.bar
                  </a>
                </p>
              </div>
              <div
                class="app-detail-support-grid-col"
              >
                <h2
                  class="el-has-no-margin el-subtitle"
                >
                  Privacy Policy
                </h2>
                <p
                  class="app-detail-info-line-adjust el-has-grey-text el-has-no-margin el-body-text"
                >
                  <a
                    href="https://foo.bar"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    https://foo.bar
                  </a>
                </p>
              </div>
              <div
                class="app-detail-support-grid-col"
              >
                <h2
                  class="el-has-no-margin el-subtitle"
                >
                  Pricing Policy
                </h2>
                <p
                  class="app-detail-info-line-adjust el-has-grey-text el-has-no-margin el-body-text"
                >
                  <a
                    href="https://foo.bar"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    https://foo.bar
                  </a>
                </p>
              </div>
            </div>
            <div
              class="el-mb11"
            >
              <h2
                class="el-has-bold-text el-subtitle"
              >
                About Developer
              </h2>
              <p
                class="el-has-grey-text el-has-no-margin el-body-text"
              >
                All about us in a number of words
              </p>
            </div>
            <div
              class="el-mb11"
            >
              <h2
                class="el-has-bold-text el-subtitle"
              >
                Permissions
              </h2>
              <div
                class="app-detail-permission-chip"
              >
                Read applicants
              </div>
              <div
                class="app-detail-permission-chip"
              >
                Read property images
              </div>
              <div
                class="app-detail-permission-chip"
              >
                Read properties
              </div>
            </div>
            <div
              class="el-mb11"
            >
              <h2
                class="el-has-bold-text el-subtitle"
              >
                AgencyCloud Integration
              </h2>
              <div
                class="app-detail-permission-chip"
              >
                Applicant
              </div>
              <div
                class="app-detail-permission-chip"
              >
                Applicant Export
              </div>
            </div>
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <section
      class="el-page-container"
    >
      <div
        class="el-intent-critical el-persistent-notification"
      >
        <div
          class="el-pn-icon"
          data-testid="close-icon"
        >
          <span
            class="el-icon"
          >
            <svg />
          </span>
        </div>
        <div
          class="el-pn-content"
        >
          Interested in hearing more about this app? Click here and one of the Reapit Team will be in touch!
        </div>
      </div>
      <div
        class="app-detail-back-button"
      >
        <span
          class="el-intent-primary el-icon"
        >
          <svg />
        </span>
      </div>
      <div
        class="el-mb5 el-flex-container"
      >
        <div
          class="app-detail-wrapper"
        >
          <img
            alt="will-test-dev-co-voracious-person"
            class="el-fade-in app-detail-icon"
            src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Online-Check-List-icon.png"
          />
        </div>
        <div
          class="el-flex-column el-flex-justify-between el-flex-container"
        >
          <div
            class="el-flex-column el-flex-container"
          >
            <h1
              class="el-has-no-margin el-title"
            >
              will-test-dev-co-voracious-person
            </h1>
            <p
              class="el-has-grey-text el-body-text"
            >
              Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar
            </p>
          </div>
          <div
            class="el-flex-container"
          >
            <span
              class="el-mr5 el-intent-success el-icon"
            >
              <svg />
            </span>
            <p
              class="el-mr5 el-has-no-margin el-small-text"
            >
              Integration Enabled
            </p>
            <span
              class="el-mr5 el-intent-success el-icon"
            >
              <svg />
            </span>
            <p
              class="el-mr5 el-has-no-margin el-small-text"
            >
              Verified by Reapit
            </p>
            <div
              class="el-fade-in app-detail-category-chip"
            >
              Category
            </div>
            <p
              class="el-mr5 el-has-bold-text el-has-no-margin el-small-text"
            >
              Integration
            </p>
          </div>
        </div>
      </div>
      <div
        class="el-mb11 el-button-group"
      >
        <div
          class="el-button-group-align-left el-button-group-inner"
        >
          <a
            href="mailto:foo@bar.com?subject=will-test-dev-co-voracious-person%20Enquiry&body=Dear%20Will Test DevCo%2C%20%0A%0AI%20would%20like%20more%20information%20about%20will-test-dev-co-voracious-person%20featured%20in%20the%20Reapit%20AppMarket%20%0A%0ARegards"
            rel="noopener noreferrer"
            target="_blank"
          >
            <button
              class="el-intent-low el-button"
            >
              Enquire About Integration
              <div
                class="el-button-loader"
              />
            </button>
          </a>
        </div>
      </div>
      <div
        class="apps-detail-content-grid"
      >
        <div
          class="apps-detail-content-col-main"
        >
          <h2
            class="el-has-bold-text el-subtitle"
          >
            About App
          </h2>
          <div>
            Mock Component
          </div>
          <div
            class="el-button-group"
          >
            <div
              class="el-button-group-inner"
            >
              <button
                class="el-intent-low el-button"
              >
                <div
                  class="el-flex-align-center el-flex-container"
                >
                  <span
                    class="el-mr4 el-intent-primary el-icon"
                    style="font-size: 1.25em;"
                  >
                    <svg />
                  </span>
                  Getting started with 
                  will-test-dev-co-voracious-person
                </div>
                <div
                  class="el-button-loader"
                />
              </button>
              <button
                class="el-intent-low el-button"
              >
                <div
                  class="el-flex-align-center el-flex-container"
                >
                  <span
                    class="el-mr4 el-intent-primary el-icon"
                    style="font-size: 1.25em;"
                  >
                    <svg />
                  </span>
                  Why 
                  will-test-dev-co-voracious-person
                </div>
                <div
                  class="el-button-loader"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="apps-detail-content-col-carousel"
        >
          <div
            class="carousel-wrapper"
          >
            <div
              class="carousel-grid"
              style="--ckvo4up-0: 1; --ckvo4up-1: 50.000%; --ckvo4up-2: 0.375rem; --ckvo4up-6: 0.625rem;"
            >
              <div
                class="carousel-col"
              >
                <div
                  class="app-detail-image-wrapper"
                >
                  <img
                    alt="Application Image"
                    class="app-detail-image"
                    src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Online-Check-List-screen2ImageUrl.png"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="apps-detail-content-col-permissions"
        >
          <div
            class="el-mb11 app-detail-support-grid"
          >
            <div
              class="app-detail-support-grid-col"
            >
              <h2
                class="el-has-no-margin el-subtitle"
              >
                Website
              </h2>
              <p
                class="app-detail-info-line-adjust el-has-grey-text el-has-no-margin el-body-text"
              >
                <a
                  href="https://foo.bar"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  https://foo.bar
                </a>
              </p>
            </div>
            <div
              class="app-detail-support-grid-col"
            >
              <h2
                class="el-has-no-margin el-subtitle"
              >
                Support Email
              </h2>
              <p
                class="app-detail-info-line-adjust el-has-grey-text el-has-no-margin el-body-text"
              >
                <a
                  href="mailto:foo@bar.com"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  foo@bar.com
                </a>
              </p>
            </div>
            <div
              class="app-detail-support-grid-col"
            >
              <h2
                class="el-has-no-margin el-subtitle"
              >
                Telephone
              </h2>
              <p
                class="app-detail-info-line-adjust el-has-grey-text el-has-no-margin el-body-text"
              >
                07777777777
              </p>
            </div>
            <div
              class="app-detail-support-grid-col"
            >
              <h2
                class="el-has-no-margin el-subtitle"
              >
                Terms and Conditions
              </h2>
              <p
                class="app-detail-info-line-adjust el-has-grey-text el-has-no-margin el-body-text"
              >
                <a
                  href="https://foo.bar"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  https://foo.bar
                </a>
              </p>
            </div>
            <div
              class="app-detail-support-grid-col"
            >
              <h2
                class="el-has-no-margin el-subtitle"
              >
                Privacy Policy
              </h2>
              <p
                class="app-detail-info-line-adjust el-has-grey-text el-has-no-margin el-body-text"
              >
                <a
                  href="https://foo.bar"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  https://foo.bar
                </a>
              </p>
            </div>
            <div
              class="app-detail-support-grid-col"
            >
              <h2
                class="el-has-no-margin el-subtitle"
              >
                Pricing Policy
              </h2>
              <p
                class="app-detail-info-line-adjust el-has-grey-text el-has-no-margin el-body-text"
              >
                <a
                  href="https://foo.bar"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  https://foo.bar
                </a>
              </p>
            </div>
          </div>
          <div
            class="el-mb11"
          >
            <h2
              class="el-has-bold-text el-subtitle"
            >
              About Developer
            </h2>
            <p
              class="el-has-grey-text el-has-no-margin el-body-text"
            >
              All about us in a number of words
            </p>
          </div>
          <div
            class="el-mb11"
          >
            <h2
              class="el-has-bold-text el-subtitle"
            >
              Permissions
            </h2>
            <div
              class="app-detail-permission-chip"
            >
              Read applicants
            </div>
            <div
              class="app-detail-permission-chip"
            >
              Read property images
            </div>
            <div
              class="app-detail-permission-chip"
            >
              Read properties
            </div>
          </div>
          <div
            class="el-mb11"
          >
            <h2
              class="el-has-bold-text el-subtitle"
            >
              AgencyCloud Integration
            </h2>
            <div
              class="app-detail-permission-chip"
            >
              Applicant
            </div>
            <div
              class="app-detail-permission-chip"
            >
              Applicant Export
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppsDetail should match a snapshot with data 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div />
      <div />
      <div />
      <div />
      <div />
    </div>
    <div>
      <div
        class="el-snack-holder"
      />
      <section
        class="el-page-container"
      >
        <div
          class="el-intent-critical el-persistent-notification"
        >
          <div
            class="el-pn-icon"
            data-testid="close-icon"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </div>
          <div
            class="el-pn-content"
          >
            Interested in hearing more about this app? Click here and one of the Reapit Team will be in touch!
          </div>
        </div>
        <div
          class="app-detail-back-button"
        >
          <span
            class="el-intent-primary el-icon"
          >
            <svg />
          </span>
        </div>
        <div
          class="el-mb5 el-flex-container"
        >
          <div
            class="app-detail-wrapper"
          >
            <img
              alt="will-test-dev-co-voracious-person"
              class="el-fade-in app-detail-icon"
              src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Online-Check-List-icon.png"
            />
          </div>
          <div
            class="el-flex-column el-flex-justify-between el-flex-container"
          >
            <div
              class="el-flex-column el-flex-container"
            >
              <h1
                class="el-has-no-margin el-title"
              >
                will-test-dev-co-voracious-person
              </h1>
              <p
                class="el-has-grey-text el-body-text"
              >
                Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar
              </p>
            </div>
            <div
              class="el-flex-container"
            >
              <span
                class="el-mr5 el-intent-success el-icon"
              >
                <svg />
              </span>
              <p
                class="el-mr5 el-has-no-margin el-small-text"
              >
                Verified by Reapit
              </p>
              <div
                class="el-fade-in app-detail-category-chip"
              >
                Category
              </div>
              <p
                class="el-mr5 el-has-bold-text el-has-no-margin el-small-text"
              >
                Integration
              </p>
            </div>
          </div>
        </div>
        <div
          class="el-mb11 el-button-group"
        >
          <div
            class="el-button-group-align-left el-button-group-inner"
          >
            <button
              class="el-intent-critical el-button"
            >
              Enable Integration
              <div
                class="el-button-loader"
              />
            </button>
            <a
              href="mailto:foo@bar.com?subject=will-test-dev-co-voracious-person%20Enquiry&body=Dear%20Will Test DevCo%2C%20%0A%0AI%20would%20like%20more%20information%20about%20will-test-dev-co-voracious-person%20featured%20in%20the%20Reapit%20AppMarket%20%0A%0ARegards"
              rel="noopener noreferrer"
              target="_blank"
            >
              <button
                class="el-intent-low el-button"
              >
                Enquire About Integration
                <div
                  class="el-button-loader"
                />
              </button>
            </a>
          </div>
        </div>
        <div
          class="apps-detail-content-grid"
        >
          <div
            class="apps-detail-content-col-main"
          >
            <h2
              class="el-has-bold-text el-subtitle"
            >
              About App
            </h2>
            <div>
              Mock Component
            </div>
            <div
              class="el-button-group"
            >
              <div
                class="el-button-group-inner"
              >
                <button
                  class="el-intent-low el-button"
                >
                  <div
                    class="el-flex-align-center el-flex-container"
                  >
                    <span
                      class="el-mr4 el-intent-primary el-icon"
                      style="font-size: 1.25em;"
                    >
                      <svg />
                    </span>
                    Getting started with 
                    will-test-dev-co-voracious-person
                  </div>
                  <div
                    class="el-button-loader"
                  />
                </button>
                <button
                  class="el-intent-low el-button"
                >
                  <div
                    class="el-flex-align-center el-flex-container"
                  >
                    <span
                      class="el-mr4 el-intent-primary el-icon"
                      style="font-size: 1.25em;"
                    >
                      <svg />
                    </span>
                    Why 
                    will-test-dev-co-voracious-person
                  </div>
                  <div
                    class="el-button-loader"
                  />
                </button>
              </div>
            </div>
          </div>
          <div
            class="apps-detail-content-col-carousel"
          >
            <div
              class="carousel-wrapper"
            >
              <div
                class="carousel-grid"
                style="--ckvo4up-0: 1; --ckvo4up-1: 50.000%; --ckvo4up-2: 0.375rem; --ckvo4up-6: 0.625rem;"
              >
                <div
                  class="carousel-col"
                >
                  <div
                    class="app-detail-image-wrapper"
                  >
                    <img
                      alt="Application Image"
                      class="app-detail-image"
                      src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Online-Check-List-screen2ImageUrl.png"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="apps-detail-content-col-permissions"
          >
            <div
              class="el-mb11 app-detail-support-grid"
            >
              <div
                class="app-detail-support-grid-col"
              >
                <h2
                  class="el-has-no-margin el-subtitle"
                >
                  Website
                </h2>
                <p
                  class="app-detail-info-line-adjust el-has-grey-text el-has-no-margin el-body-text"
                >
                  <a
                    href="https://foo.bar"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    https://foo.bar
                  </a>
                </p>
              </div>
              <div
                class="app-detail-support-grid-col"
              >
                <h2
                  class="el-has-no-margin el-subtitle"
                >
                  Support Email
                </h2>
                <p
                  class="app-detail-info-line-adjust el-has-grey-text el-has-no-margin el-body-text"
                >
                  <a
                    href="mailto:foo@bar.com"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    foo@bar.com
                  </a>
                </p>
              </div>
              <div
                class="app-detail-support-grid-col"
              >
                <h2
                  class="el-has-no-margin el-subtitle"
                >
                  Telephone
                </h2>
                <p
                  class="app-detail-info-line-adjust el-has-grey-text el-has-no-margin el-body-text"
                >
                  07777777777
                </p>
              </div>
              <div
                class="app-detail-support-grid-col"
              >
                <h2
                  class="el-has-no-margin el-subtitle"
                >
                  Terms and Conditions
                </h2>
                <p
                  class="app-detail-info-line-adjust el-has-grey-text el-has-no-margin el-body-text"
                >
                  <a
                    href="https://foo.bar"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    https://foo.bar
                  </a>
                </p>
              </div>
              <div
                class="app-detail-support-grid-col"
              >
                <h2
                  class="el-has-no-margin el-subtitle"
                >
                  Privacy Policy
                </h2>
                <p
                  class="app-detail-info-line-adjust el-has-grey-text el-has-no-margin el-body-text"
                >
                  <a
                    href="https://foo.bar"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    https://foo.bar
                  </a>
                </p>
              </div>
              <div
                class="app-detail-support-grid-col"
              >
                <h2
                  class="el-has-no-margin el-subtitle"
                >
                  Pricing Policy
                </h2>
                <p
                  class="app-detail-info-line-adjust el-has-grey-text el-has-no-margin el-body-text"
                >
                  <a
                    href="https://foo.bar"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    https://foo.bar
                  </a>
                </p>
              </div>
            </div>
            <div
              class="el-mb11"
            >
              <h2
                class="el-has-bold-text el-subtitle"
              >
                About Developer
              </h2>
              <p
                class="el-has-grey-text el-has-no-margin el-body-text"
              >
                All about us in a number of words
              </p>
            </div>
            <div
              class="el-mb11"
            >
              <h2
                class="el-has-bold-text el-subtitle"
              >
                Permissions
              </h2>
              <div
                class="app-detail-permission-chip"
              >
                Read applicants
              </div>
              <div
                class="app-detail-permission-chip"
              >
                Read property images
              </div>
              <div
                class="app-detail-permission-chip"
              >
                Read properties
              </div>
            </div>
            <div
              class="el-mb11"
            >
              <h2
                class="el-has-bold-text el-subtitle"
              >
                AgencyCloud Integration
              </h2>
              <div
                class="app-detail-permission-chip"
              >
                Applicant
              </div>
              <div
                class="app-detail-permission-chip"
              >
                Applicant Export
              </div>
            </div>
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <section
      class="el-page-container"
    >
      <div
        class="el-intent-critical el-persistent-notification"
      >
        <div
          class="el-pn-icon"
          data-testid="close-icon"
        >
          <span
            class="el-icon"
          >
            <svg />
          </span>
        </div>
        <div
          class="el-pn-content"
        >
          Interested in hearing more about this app? Click here and one of the Reapit Team will be in touch!
        </div>
      </div>
      <div
        class="app-detail-back-button"
      >
        <span
          class="el-intent-primary el-icon"
        >
          <svg />
        </span>
      </div>
      <div
        class="el-mb5 el-flex-container"
      >
        <div
          class="app-detail-wrapper"
        >
          <img
            alt="will-test-dev-co-voracious-person"
            class="el-fade-in app-detail-icon"
            src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Online-Check-List-icon.png"
          />
        </div>
        <div
          class="el-flex-column el-flex-justify-between el-flex-container"
        >
          <div
            class="el-flex-column el-flex-container"
          >
            <h1
              class="el-has-no-margin el-title"
            >
              will-test-dev-co-voracious-person
            </h1>
            <p
              class="el-has-grey-text el-body-text"
            >
              Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar
            </p>
          </div>
          <div
            class="el-flex-container"
          >
            <span
              class="el-mr5 el-intent-success el-icon"
            >
              <svg />
            </span>
            <p
              class="el-mr5 el-has-no-margin el-small-text"
            >
              Verified by Reapit
            </p>
            <div
              class="el-fade-in app-detail-category-chip"
            >
              Category
            </div>
            <p
              class="el-mr5 el-has-bold-text el-has-no-margin el-small-text"
            >
              Integration
            </p>
          </div>
        </div>
      </div>
      <div
        class="el-mb11 el-button-group"
      >
        <div
          class="el-button-group-align-left el-button-group-inner"
        >
          <button
            class="el-intent-critical el-button"
          >
            Enable Integration
            <div
              class="el-button-loader"
            />
          </button>
          <a
            href="mailto:foo@bar.com?subject=will-test-dev-co-voracious-person%20Enquiry&body=Dear%20Will Test DevCo%2C%20%0A%0AI%20would%20like%20more%20information%20about%20will-test-dev-co-voracious-person%20featured%20in%20the%20Reapit%20AppMarket%20%0A%0ARegards"
            rel="noopener noreferrer"
            target="_blank"
          >
            <button
              class="el-intent-low el-button"
            >
              Enquire About Integration
              <div
                class="el-button-loader"
              />
            </button>
          </a>
        </div>
      </div>
      <div
        class="apps-detail-content-grid"
      >
        <div
          class="apps-detail-content-col-main"
        >
          <h2
            class="el-has-bold-text el-subtitle"
          >
            About App
          </h2>
          <div>
            Mock Component
          </div>
          <div
            class="el-button-group"
          >
            <div
              class="el-button-group-inner"
            >
              <button
                class="el-intent-low el-button"
              >
                <div
                  class="el-flex-align-center el-flex-container"
                >
                  <span
                    class="el-mr4 el-intent-primary el-icon"
                    style="font-size: 1.25em;"
                  >
                    <svg />
                  </span>
                  Getting started with 
                  will-test-dev-co-voracious-person
                </div>
                <div
                  class="el-button-loader"
                />
              </button>
              <button
                class="el-intent-low el-button"
              >
                <div
                  class="el-flex-align-center el-flex-container"
                >
                  <span
                    class="el-mr4 el-intent-primary el-icon"
                    style="font-size: 1.25em;"
                  >
                    <svg />
                  </span>
                  Why 
                  will-test-dev-co-voracious-person
                </div>
                <div
                  class="el-button-loader"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="apps-detail-content-col-carousel"
        >
          <div
            class="carousel-wrapper"
          >
            <div
              class="carousel-grid"
              style="--ckvo4up-0: 1; --ckvo4up-1: 50.000%; --ckvo4up-2: 0.375rem; --ckvo4up-6: 0.625rem;"
            >
              <div
                class="carousel-col"
              >
                <div
                  class="app-detail-image-wrapper"
                >
                  <img
                    alt="Application Image"
                    class="app-detail-image"
                    src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Online-Check-List-screen2ImageUrl.png"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="apps-detail-content-col-permissions"
        >
          <div
            class="el-mb11 app-detail-support-grid"
          >
            <div
              class="app-detail-support-grid-col"
            >
              <h2
                class="el-has-no-margin el-subtitle"
              >
                Website
              </h2>
              <p
                class="app-detail-info-line-adjust el-has-grey-text el-has-no-margin el-body-text"
              >
                <a
                  href="https://foo.bar"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  https://foo.bar
                </a>
              </p>
            </div>
            <div
              class="app-detail-support-grid-col"
            >
              <h2
                class="el-has-no-margin el-subtitle"
              >
                Support Email
              </h2>
              <p
                class="app-detail-info-line-adjust el-has-grey-text el-has-no-margin el-body-text"
              >
                <a
                  href="mailto:foo@bar.com"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  foo@bar.com
                </a>
              </p>
            </div>
            <div
              class="app-detail-support-grid-col"
            >
              <h2
                class="el-has-no-margin el-subtitle"
              >
                Telephone
              </h2>
              <p
                class="app-detail-info-line-adjust el-has-grey-text el-has-no-margin el-body-text"
              >
                07777777777
              </p>
            </div>
            <div
              class="app-detail-support-grid-col"
            >
              <h2
                class="el-has-no-margin el-subtitle"
              >
                Terms and Conditions
              </h2>
              <p
                class="app-detail-info-line-adjust el-has-grey-text el-has-no-margin el-body-text"
              >
                <a
                  href="https://foo.bar"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  https://foo.bar
                </a>
              </p>
            </div>
            <div
              class="app-detail-support-grid-col"
            >
              <h2
                class="el-has-no-margin el-subtitle"
              >
                Privacy Policy
              </h2>
              <p
                class="app-detail-info-line-adjust el-has-grey-text el-has-no-margin el-body-text"
              >
                <a
                  href="https://foo.bar"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  https://foo.bar
                </a>
              </p>
            </div>
            <div
              class="app-detail-support-grid-col"
            >
              <h2
                class="el-has-no-margin el-subtitle"
              >
                Pricing Policy
              </h2>
              <p
                class="app-detail-info-line-adjust el-has-grey-text el-has-no-margin el-body-text"
              >
                <a
                  href="https://foo.bar"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  https://foo.bar
                </a>
              </p>
            </div>
          </div>
          <div
            class="el-mb11"
          >
            <h2
              class="el-has-bold-text el-subtitle"
            >
              About Developer
            </h2>
            <p
              class="el-has-grey-text el-has-no-margin el-body-text"
            >
              All about us in a number of words
            </p>
          </div>
          <div
            class="el-mb11"
          >
            <h2
              class="el-has-bold-text el-subtitle"
            >
              Permissions
            </h2>
            <div
              class="app-detail-permission-chip"
            >
              Read applicants
            </div>
            <div
              class="app-detail-permission-chip"
            >
              Read property images
            </div>
            <div
              class="app-detail-permission-chip"
            >
              Read properties
            </div>
          </div>
          <div
            class="el-mb11"
          >
            <h2
              class="el-has-bold-text el-subtitle"
            >
              AgencyCloud Integration
            </h2>
            <div
              class="app-detail-permission-chip"
            >
              Applicant
            </div>
            <div
              class="app-detail-permission-chip"
            >
              Applicant Export
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
